<resources>
    <string name="app_name">Vaccination Scheduler</string>
    <string name="schedule">Schedule</string>
    <string name="messages">Messages</string>
    <string name="vaccines">Vaccines</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Credentials not registered.</string>
    <string name="invalid_pin">PIN must be 6 digits</string>
    <string name="wrong_pin">Wrong PIN</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="empty_edittext">This Field Cannot be Empty</string>
    <string name="pin">PIN</string>
    <string name="log_in">LOG IN</string>
    <string name="national_id_no">National ID No.</string>
    <string name="no_internet">No internet access. An Internet Connection is required for this.</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="fill_fields">Fill all fields.</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="add">ADD</string>
    <string name="add_child">Add Child</string>
    <string name="mobile_placeholder">+254 000000000</string>
    <string name="email_placeholder">youremail@provider.com</string>
    <string name="name_placeholder">Your Name Here</string>
    <string name="delete">DELETE</string>
    <string name="log_out">Log Out</string>
    <string name="generate_report">Generate Report</string>
    <string name="start_chat">Start Chat</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ac lorem dolor. Curabitur ac urna tortor. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In varius purus sapien, non vulputate ligula mollis in. Mauris ac ex non turpis lacinia porttitor ut ut orci. Sed at feugiat. </string>
    <string name="type_a_message">Type a Message</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_rationale">Location permission is needed to provide hospital proximity</string>
    <string name="permission_denied_explanation">Permission was denied, cannot show distance.</string>
    <string name="settings">Settings</string>
    <string name="hospital_location">Hospital Location</string>
    <string name="delete_chat">Delete Chat</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="update_appts">Update all Past Shots as Given</string>
    <string name="vaxLink"><a href="%s">Read More</a></string>

</resources>