<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/name_placeholder"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_email"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:hint="@string/email_placeholder"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:textAlignment="center"
            android:hint="@string/mobile_placeholder"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/profile_natID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/national_id_no"
            android:textAlignment="center"
            android:layout_marginVertical="4dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_delete"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/delete"
                app:icon="@drawable/ic_delete_forever_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/profile_log_out"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/log_out"
                app:icon="@drawable/ic_signout_24" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_addchild_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/add_child" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>